<resources>
    <string name="app_name">Doodlz</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_color">Color</string>
    <string name="menu_item_line_width">Line Width</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_print">Print</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="line_imageView_description">This﻿ displays ﻿the ﻿line ﻿thickness</string>
    <string name="permission_explanation">Permission Explanation</string>
    <string name="message_saved">Message Saved</string>
    <string name="message_error_saving">Error Saving</string>
    <string name="message_error_printing">Error Printing</string>
    <string name="title_color_dialog">asdas</string>
    <string name="button_set_color">asdasd</string>
    <string name="title_line_width_dialog">ghjghkjg</string>
    <string name="button_set_line_width">jdsfjkldsf</string>
    <string name="message_erase">Erase</string>
    <string name="button_erase">sadsdgdfh</string>
</resources>
